# phone_book

./: README.md  gen_data.py  main.py  pyproject.toml
data/: test_data.csv
